crates/oxc_linter_rules/src/snapshots/jest_no_unneeded_async_expect_function.snap
---
source: crates/oxc_linter_rules/src/tester.rs
---

  ⚠ jest(no-unneeded-async-expect-function): Unnecessary async function wrapper
   ╭─[no_unneeded_async_expect_function.tsx:3:34]
 2 │                       it('should be fixed', async () => {
 3 │ ╭─▶                     await expect(async () => {
 4 │ │                         await doSomethingAsync();
 5 │ ╰─▶                     }).rejects.toThrow();
 6 │                       })
   ╰────
  help: Remove the async wrapper and pass the promise directly to expect

  ⚠ jest(no-unneeded-async-expect-function): Unnecessary async function wrapper
   ╭─[no_unneeded_async_expect_function.tsx:3:34]
 2 │                   it('should be fixed', async () => {
 3 │                     await expect(async () => await doSomethingAsync()).rejects.toThrow();
   ·                                  ────────────────────────────────────
 4 │                   })
   ╰────
  help: Remove the async wrapper and pass the promise directly to expect

  ⚠ jest(no-unneeded-async-expect-function): Unnecessary async function wrapper
   ╭─[no_unneeded_async_expect_function.tsx:3:34]
 2 │                       it('should be fixed', async () => {
 3 │ ╭─▶                     await expect(async function () {
 4 │ │                         await doSomethingAsync();
 5 │ ╰─▶                     }).rejects.toThrow();
 6 │                       })
   ╰────
  help: Remove the async wrapper and pass the promise directly to expect

  ⚠ jest(no-unneeded-async-expect-function): Unnecessary async function wrapper
   ╭─[no_unneeded_async_expect_function.tsx:3:36]
 2 │                         it('should be fixed for async arrow function', async () => {
 3 │ ╭─▶                       await expect(async () => {
 4 │ │                           await doSomethingAsync(1, 2);
 5 │ ╰─▶                       }).rejects.toThrow();
 6 │                         })
   ╰────
  help: Remove the async wrapper and pass the promise directly to expect

  ⚠ jest(no-unneeded-async-expect-function): Unnecessary async function wrapper
   ╭─[no_unneeded_async_expect_function.tsx:3:36]
 2 │                         it('should be fixed for async normal function', async () => {
 3 │ ╭─▶                       await expect(async function () {
 4 │ │                           await doSomethingAsync(1, 2);
 5 │ ╰─▶                       }).rejects.toThrow();
 6 │                         })
   ╰────
  help: Remove the async wrapper and pass the promise directly to expect

  ⚠ jest(no-unneeded-async-expect-function): Unnecessary async function wrapper
   ╭─[no_unneeded_async_expect_function.tsx:3:36]
 2 │                         it('should be fixed for Promise.all', async () => {
 3 │ ╭─▶                       await expect(async function () {
 4 │ │                           await Promise.all([doSomethingAsync(1, 2), doSomethingAsync()]);
 5 │ ╰─▶                       }).rejects.toThrow();
 6 │                         })
   ╰────
  help: Remove the async wrapper and pass the promise directly to expect

  ⚠ jest(no-unneeded-async-expect-function): Unnecessary async function wrapper
   ╭─[no_unneeded_async_expect_function.tsx:4:36]
 3 │                           const a = async () => { await doSomethingAsync() };
 4 │ ╭─▶                       await expect(async () => {
 5 │ │                           await a();
 6 │ ╰─▶                       }).rejects.toThrow();
 7 │                         })
   ╰────
  help: Remove the async wrapper and pass the promise directly to expect
