crates/oxc_linter_rules/src/snapshots/jest_no_untyped_mock_factory.snap
---
source: crates/oxc_linter_rules/src/tester.rs
---

  ⚠ jest(no-untyped-mock-factory): `jest.mock()` factories should not be used without an explicit type parameter.
   ╭─[no_untyped_mock_factory.tsx:2:22]
 1 │ 
 2 │                 jest.mock('../moduleName', () => {
   ·                      ────
 3 │                     return jest.fn(() => 42);
   ╰────
  help: Add a type parameter to the mock factory such as `typeof import("../moduleName")`

  ⚠ jest(no-untyped-mock-factory): `jest.mock()` factories should not be used without an explicit type parameter.
   ╭─[no_untyped_mock_factory.tsx:2:22]
 1 │ 
 2 │                 jest.mock("./module", () => ({
   ·                      ────
 3 │                     ...jest.requireActual('./module'),
   ╰────
  help: Add a type parameter to the mock factory such as `typeof import("./module")`

  ⚠ jest(no-untyped-mock-factory): `jest.mock()` factories should not be used without an explicit type parameter.
   ╭─[no_untyped_mock_factory.tsx:2:22]
 1 │ 
 2 │                 jest.mock('random-num', () => {
   ·                      ────
 3 │                     return jest.fn(() => 42);
   ╰────
  help: Add a type parameter to the mock factory such as `typeof import("random-num")`

  ⚠ jest(no-untyped-mock-factory): `jest.mock()` factories should not be used without an explicit type parameter.
   ╭─[no_untyped_mock_factory.tsx:2:22]
 1 │ 
 2 │                 jest.doMock('random-num', () => {
   ·                      ──────
 3 │                     return jest.fn(() => 42);
   ╰────
  help: Add a type parameter to the mock factory such as `typeof import("random-num")`

  ⚠ jest(no-untyped-mock-factory): `jest.mock()` factories should not be used without an explicit type parameter.
   ╭─[no_untyped_mock_factory.tsx:2:22]
 1 │ 
 2 │                 jest['mock']('random-num', () => {
   ·                      ──────
 3 │                     return jest.fn(() => 42);
   ╰────
  help: Add a type parameter to the mock factory such as `typeof import("random-num")`

  ⚠ jest(no-untyped-mock-factory): `jest.mock()` factories should not be used without an explicit type parameter.
   ╭─[no_untyped_mock_factory.tsx:3:22]
 2 │                 const moduleToMock = 'random-num';
 3 │                 jest.mock(moduleToMock, () => {
   ·                      ────
 4 │                     return jest.fn(() => 42);
   ╰────
  help: Add a type parameter to the mock factory such as `typeof import("moduleToMock")`
