crates/oxc_linter_rules/src/snapshots/jest_padding_around_after_all_blocks.snap
---
source: crates/oxc_linter_rules/src/tester.rs
---

  ⚠ jest(padding-around-after-all-blocks): Missing padding before afterAll block
   ╭─[padding_around_after_all_blocks.tsx:2:1]
 1 │ const thing = 123;
 2 │ afterAll(() => {});
   · ▲
   ╰────
  help: Make sure there is an empty new line before the afterAll block

  ⚠ jest(padding-around-after-all-blocks): Missing padding before afterAll block
   ╭─[padding_around_after_all_blocks.tsx:4:1]
 3 │ /* two */
 4 │ afterAll(() => {});
   · ▲
   ╰────
  help: Make sure there is an empty new line before the afterAll block
