crates/oxc_linter_rules/src/snapshots/jest_prefer_called_with.snap
---
source: crates/oxc_linter_rules/src/tester.rs
---

  ⚠ jest(prefer-called-with): Suggest using `toBeCalledWith()` or `toHaveBeenCalledWith()`.
   ╭─[prefer_called_with.tsx:1:12]
 1 │ expect(fn).toBeCalled();
   ·            ──────────
   ╰────
  help: Prefer toBeCalledWith(/* expected args */)

  ⚠ jest(prefer-called-with): Suggest using `toBeCalledWith()` or `toHaveBeenCalledWith()`.
   ╭─[prefer_called_with.tsx:1:21]
 1 │ expect(fn).resolves.toBeCalled();
   ·                     ──────────
   ╰────
  help: Prefer toBeCalledWith(/* expected args */)

  ⚠ jest(prefer-called-with): Suggest using `toBeCalledWith()` or `toHaveBeenCalledWith()`.
   ╭─[prefer_called_with.tsx:1:12]
 1 │ expect(fn).toHaveBeenCalled();
   ·            ────────────────
   ╰────
  help: Prefer toHaveBeenCalledWith(/* expected args */)
