crates/oxc_linter_rules/src/snapshots/jest_prefer_each.snap
---
source: crates/oxc_linter_rules/src/tester.rs
---

  ⚠ jest(prefer-each): Enforce using `each` rather than manual loops
   ╭─[prefer_each.tsx:1:1]
 1 │ for (const [input, expected] of data) {
   · ──────────────────────────────────────
 2 │               it(`results in ${expected}`, () => {
   ╰────
  help: Prefer using `it.each` rather than a manual loop.

  ⚠ jest(prefer-each): Enforce using `each` rather than manual loops
   ╭─[prefer_each.tsx:1:1]
 1 │ for (const [input, expected] of data) {
   · ──────────────────────────────────────
 2 │               describe(`when the input is ${input}`, () => {
   ╰────
  help: Prefer using `describe.each` rather than a manual loop.

  ⚠ jest(prefer-each): Enforce using `each` rather than manual loops
   ╭─[prefer_each.tsx:1:1]
 1 │ for (const [input, expected] of data) {
   · ──────────────────────────────────────
 2 │               describe(`when the input is ${input}`, () => {
   ╰────
  help: Prefer using `describe.each` rather than a manual loop.

  ⚠ jest(prefer-each): Enforce using `each` rather than manual loops
   ╭─[prefer_each.tsx:8:13]
 7 │             }
 8 │             for (const [input, expected] of data) {
   ·             ──────────────────────────────────────
 9 │               it.skip(`results in ${expected}`, () => {
   ╰────
  help: Prefer using `it.each` rather than a manual loop.

  ⚠ jest(prefer-each): Enforce using `each` rather than manual loops
   ╭─[prefer_each.tsx:1:1]
 1 │ for (const [input, expected] of data) {
   · ──────────────────────────────────────
 2 │               it.skip(`results in ${expected}`, () => {
   ╰────
  help: Prefer using `it.each` rather than a manual loop.

  ⚠ jest(prefer-each): Enforce using `each` rather than manual loops
   ╭─[prefer_each.tsx:4:13]
 3 │             });
 4 │             for (const [input, expected] of data) {
   ·             ──────────────────────────────────────
 5 │               it.skip(`results in ${expected}`, () => {
   ╰────
  help: Prefer using `it.each` rather than a manual loop.

  ⚠ jest(prefer-each): Enforce using `each` rather than manual loops
   ╭─[prefer_each.tsx:1:1]
 1 │ for (const [input, expected] of data) {
   · ──────────────────────────────────────
 2 │               it.skip(`results in ${expected}`, () => {
   ╰────
  help: Prefer using `it.each` rather than a manual loop.

  ⚠ jest(prefer-each): Enforce using `each` rather than manual loops
   ╭─[prefer_each.tsx:4:13]
 3 │             });
 4 │             for (const [input, expected] of data) {
   ·             ──────────────────────────────────────
 5 │               it.skip(`results in ${expected}`, () => {
   ╰────
  help: Prefer using `it.each` rather than a manual loop.

  ⚠ jest(prefer-each): Enforce using `each` rather than manual loops
   ╭─[prefer_each.tsx:1:1]
 1 │ for (const [input, expected] of data) {
   · ──────────────────────────────────────
 2 │               it(`results in ${expected}`, () => {
   ╰────
  help: Prefer using `it.each` rather than a manual loop.

  ⚠ jest(prefer-each): Enforce using `each` rather than manual loops
   ╭─[prefer_each.tsx:1:1]
 1 │ for (const [input, expected] of data) {
   · ──────────────────────────────────────
 2 │               it(`results in ${expected}`, () => {
   ╰────
  help: Prefer using `it.each` rather than a manual loop.

  ⚠ jest(prefer-each): Enforce using `each` rather than manual loops
   ╭─[prefer_each.tsx:6:13]
 5 │             }
 6 │             for (const [input, expected] of data) {
   ·             ──────────────────────────────────────
 7 │               it(`results in ${expected}`, () => {
   ╰────
  help: Prefer using `it.each` rather than a manual loop.

  ⚠ jest(prefer-each): Enforce using `each` rather than manual loops
   ╭─[prefer_each.tsx:1:1]
 1 │ for (const [input, expected] of data) {
   · ──────────────────────────────────────
 2 │               it(`results in ${expected}`, () => {
   ╰────
  help: Prefer using `it.each` rather than a manual loop.

  ⚠ jest(prefer-each): Enforce using `each` rather than manual loops
   ╭─[prefer_each.tsx:6:13]
 5 │             }
 6 │             for (const [input, expected] of data) {
   ·             ──────────────────────────────────────
 7 │               test(`results in ${expected}`, () => {
   ╰────
  help: Prefer using `it.each` rather than a manual loop.

  ⚠ jest(prefer-each): Enforce using `each` rather than manual loops
   ╭─[prefer_each.tsx:1:1]
 1 │ for (const [input, expected] of data) {
   · ──────────────────────────────────────
 2 │               beforeEach(() => setupSomething(input));
   ╰────
  help: Prefer using `describe.each` rather than a manual loop.

  ⚠ jest(prefer-each): Enforce using `each` rather than manual loops
   ╭─[prefer_each.tsx:1:1]
 1 │ for (const [input, expected] of data) {
   · ──────────────────────────────────────
 2 │               it("only returns numbers that are greater than seven", function () {
   ╰────
  help: Prefer using `it.each` rather than a manual loop.

  ⚠ jest(prefer-each): Enforce using `each` rather than manual loops
   ╭─[prefer_each.tsx:1:1]
 1 │ for (const [input, expected] of data) {
   · ──────────────────────────────────────
 2 │               beforeEach(() => setupSomething(input));
   ╰────
  help: Prefer using `describe.each` rather than a manual loop.
